about and time section

--- a/index.html
+++ b/index.html
@@ -1,74 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/reset.css">
     <link rel="stylesheet" href="./style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@400;500;700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  </head>
-  <body class="body">
-    <main class="main-section">
-      <section class="about-section">
-        <h2 class="about-title">ПРО НАШУ ЧУДОВУ ШКОЛУ</h2>
-        <ul class="about-list">
-          <li class="about-item">
-            <h3 class="about-subtitle">Чудовий розклад</h3>
-            <div class="about-container">
-              <img src="./img-fedyk/clock.jpg" alt="clock" class="about=img" >
-              <p class="about-text">Школа починається аж у 11 годині ранку! Але якщо ви в такий час вже на роботі,<br> то спокійно можете привезти дитину навіть<br>  у 7-ій ранку!!!В нас є сніданок та чудова ігрова кімната з планшетами.</p>
-            </div>
-          </li>
-          <li class="about-item">
-            <h3 class="about-subtitle">Сучасні та розуміючі вчителі</h3>
-            <div class="about-container">
-              <img src="./img-fedyk/teacher.jpg" alt="" class="about=img">
-              <p class="about-text">Всі наші вчителі віком не старші ніж 30 років.<br> Їм буде легко знайти спільну мову з<br> вашою дитиною та зацікавити її у навчанні!</p>
-            </div>
-        </li>
-          <li class="about-item">
-            <h3 class="about-subtitle">Смачна їдальня</h3>
-            <div class="about-container">
-              <img src="./img-fedyk/food.jpg" alt="" class="about=img">
-              <p class="about-text">В нашій школі є чудова їдальня в якій 3 смачних прийоми їжі на день. <br> Також у нас є дієтичний план, та буфет в якому<br> продаються продукти від води, та до свіжоспеченої піци! </p>
-            </div>
-           <a href="https://www.justeattakeaway.com/" target="_blank">(дізнатись про доставку їжі)</a>
-        </li>
-          <li class="about-item">
-            <h3 class="about-subtitle">Додаткове IT навчання </h3>
-            <div class="about-container">
-              <img src="./img-fedyk/it-tech.jpg" alt="" class="about=img">
-              <p class="about-text">Якщо вашій дитині вже виповнилось 12 років, то вона<br> може навчитись такому  програмуванню як:<br> FrontEnd, Minecraft Education та Roblox. </p>
-            </div>
-          </li>
-        </ul>
-      </section>
-      <section class="time-section">
-          <h2 class="time-subtitle">Тривалість уроків</h2>
-          <p class="time-text">Тривалість занять в нашій школі однакова для всіх класів. ДОМАШНЬОГО ЗАВДАННЯ НЕМАЄ!!</p>
-          <ul class="time-list">
-            <li class="time-item">
-            <p class="time-text">Понеділок<br>11:00-17:00</p>
-            </li>
-            <li class="time-item">
-              <p class="time-text">Вівторок<br>11:00-18:00</p>
-            </li>
-            <li class="time-item">
-              <p class="time-text">Середа<br>11:00-16:00</p>
-            </li>
-            <li class="time-item">
-              <p class="time-text">Четвер<br>11:00-17:00</p>
-            </li>
-            <li class="time-item">
-              <p class="time-text">П'ятниця<br>11:00-15:00</p>
-            </li>
-          </ul>
-      </section>
+</head>
+<body>
+    <header>
+        <div class="header-container">
+            <a class="header-logo" href="./index.html">Neo | <span class="like">School</a>
+        </div>
+    </header>
+    <main>
+        <div class="container-main">
+            <a class="tables" href="./menu.html">Меню столової</a>
+            <main class="main-section">
+                <!-- Федик(початок частини) -->
+                <section class="about-section">
+                    <h2 class="about-title">ПРО НАШУ ШКОЛУ</h2>
+                    <ul class="about-list">
+                    <li class="about-item">
+                        <h3 class="about-subtitle">Чудовий розклад</h3>
+                        <div class="about-container">
+                        <img class="about-img" src="./img/clock.jpg" alt="clock" class="about=img" >
+                        <p class="about-text">Школа починається аж у 11 годині ранку! Але якщо ви в такий час вже на роботі,<br> то спокійно можете привезти дитину навіть<br>  у 7-ій ранку!!!В нас є сніданок та чудова ігрова кімната з планшетами.</p>
+                        </div>
+                    </li>
+                    <li class="about-item">
+                        <h3 class="about-subtitle">Сучасні та розуміючі вчителі</h3>
+                        <div class="about-container">
+                        <img class="about-img" src="./img/teacher.jpg" alt="" class="about=img">
+                        <p class="about-text">Всі наші вчителі віком не старші ніж 30 років.<br> Їм буде легко знайти спільну мову з<br> вашою дитиною та зацікавити її у навчанні!</p>
+                        </div>
+                    </li>
+                    <li class="about-item">
+                        <h3 class="about-subtitle">Смачна їдальня</h3>
+                        <div class="about-container">
+                        <img class="about-img" src="./img/food.jpg" alt="" class="about=img">
+                        <p class="about-text">В нашій школі є чудова їдальня в якій 3 смачних прийоми їжі на день. <br> Також у нас є дієтичний план, та буфет в якому<br> продаються продукти від води, та до свіжоспеченої піци! </p>
+                        </div>
+                        <a href="https://www.justeattakeaway.com/" target="_blank" class="about-link">(дізнатись про поставку продуктів)</a>
+                    </li>
+                    <li class="about-item">
+                        <h3 class="about-subtitle">Додаткове IT навчання </h3>
+                        <div class="about-container">
+                        <img class="about-img" src="./img/it-tech.jpg" alt="" class="about=img">
+                        <p class="about-text">Якщо вашій дитині вже виповнилось 12 років, то вона<br> може навчитись такому  програмуванню як:<br> FrontEnd, Minecraft Education та Roblox. </p>
+                    </div>
+                </li>
+            </ul>
+        </section>
+        <section class="time-section">
+            <h2 class="time-subtitle">ТРИВАЛІСТЬ УРОКІВ</h2>
+            <p class="time-text">Тривалість занять в нашій школі однакова для всіх класів.</p>
+            <p class="time-text"> ДОМАШНЬОГО ЗАВДАННЯ НЕМАЄ!!</p>
+            <ul class="time-list">
+                <li class="time-item">
+                <p class="time-description">Понеділок<br>11:00-17:00</p>
+                </li>
+                <li class="time-item">
+                <p class="time-description">Вівторок<br>11:00-18:00</p>
+                </li>
+                <li class="time-item">
+                <p class="time-description">Середа<br>11:00-16:00</p>
+                </li>
+                <li class="time-item">
+                <p class="time-description">Четвер<br>11:00-17:00</p>
+                </li>
+                <li class="time-item">
+                <p class="time-description">П'ятниця<br>11:00-15:00</p>
+                </li>
+            </ul>
+        </section>
+       <!-- Федик(кінець частини) -->
+            <section class="porsonal">
+                <h2 class="personal-title">Наш персонал</h2>
+                <ul class="personal-list">
+                    <li>
+                        <section class="personal-section">
+                            <img class="personal-section-img" src="./img/Ellipse 2.png" alt="man">
+                            <h2 class="personal-section-title">Валентин Ковальов</h2>
+                            <p class="personal-section-text">Вчитель технологій IT</p>
+                            <a class="personal-section-link" href="#">Біографія</a>
+                        </section>
+                    </li>
+                    <li>
+                        <section class="personal-section">
+                            <img class="personal-section-img" src="./img/Ellidwdpse 2.png" alt="man">
+                            <h2 class="personal-section-title">Андрій Кулина</h2>
+                            <p class="personal-section-text">Вчитель математики</p>
+                            <a class="personal-section-link" href="#">Біографія</a>
+                        </section>
+                    </li>
+                    <li>
+                        <section class="personal-section">
+                            <img class="personal-section-img" src="./img/Ellipse ss2.png" alt="man">
+                            <h2 class="personal-section-title">Олександр Федик</h2>
+                            <p class="personal-section-text">Вчитель фізкультури</p>
+                            <a class="personal-section-link" href="#">Біографія</a>
+                        </section>
+                    </li>
+                </ul>
+            </section>
+        </div>
     </main>
-  </body>
+    <footer>
+        <div class="container-footer">
+            <h2 class="footer-title">Статті кожен тиждень</h2>
+            <p class="footer-text">Більше 90% дітей що закінчили школу здали НМТ на 180+ і поступили в університет</p>
+            <div class="footer-form">
+                <input class="footer-input" placeholder="email" type="text">
+                <a class="footer-form-link" href="">Підписатись</a>
+            </div>
+            <ul class="footer-list">
+                <li>
+                    <img class="footer-img" src="./img/youtube.png" alt="icon">
+                </li>
+                <li>
+                    <img class="footer-img"src="./img/instagram.png" alt="icon">
+                </li>
+                <li>
+                    <img class="footer-img" src="./img/facebook.png" alt="icon">
+                </li>
+            </ul>
+        </div>  
+    </footer>
+</body>
 </html>
