--- a/index.html
+++ b/index.html
@@ -105,6 +105,31 @@
                     </li>
                 </ul>
             </section>
+            <section class="price-section">
+              <h2 class="price-title">ЦІНИ ТА ОПЛАТА НАВЧАННЯ</h2>
+              <ul class="price-list">
+                <li class="price-item">
+                  <h3 class="price-subtitle">Простий план</h3>
+                  <p class="price-text">Вартість: 14750грн в місяць</p>
+                </li>
+                <li class="price-item">
+                  <h3 class="price-subtitle">Дієтичний план</h3>
+                  <p class="price-text">Включає в себе дієтичне харчування<br>Вартість: 14950грн в місяць</p>
+                </li>
+                <li class="price-item">
+                  <h3 class="price-subtitle">IT план</h3>
+                  <p class="price-text">Простий план але з IT заняттями 3 рази на тиждень<br>Вартість: 18000грн в місяць</p>
+                </li>
+                <li class="price-item">
+                  <h3 class="price-subtitle">Фітнес план</h3>
+                  <p class="price-text">Дієтичне харчування та тренування в залі по буднях<br>Вартість: 15790грн в місяць </p>
+                </li>
+                <l class="price-item">
+                  <h3 class="price-subtitle">Мега план</h3>
+                  <p class="price-text">План з дієтичним харчуванням, тренуваннями і IT навчанню</p>
+                </li>
+              </ul>
+            </section>
         </div>
     </main>
     <footer>
